<resources>
    <string name="app_name">Exercise 5</string>
    <string name="action_delete_all">Delete All</string>
    <string name="action_quit">Quit</string>
    <string name="action_refresh">Refresh</string>
    <string name="minutes_abbreviated">min</string>
    <string name="arrival_time">100</string>
    <string name="platform">%s Platform %d</string>
    <string name="arrival_time_string">14:14</string>
    <string name="status_string">On Time</string>
    <string name="destination_time_string">15:01</string>
    <string name="destination_string">Ashfield</string>
</resources>