<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.mad.exercise5.MainActivity">

    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:title="@string/action_refresh"
        android:icon="@drawable/ic_action_refresh"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_delete_all"
        android:orderInCategory="200"
        android:title="@string/action_delete_all"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_quit"
        android:orderInCategory="300"
        android:title="@string/action_quit"
        app:showAsAction="never" />

</menu>
