<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/standard_padding">


    <FrameLayout
        android:id="@+id/arrival_time_frame"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/colourGreen"
        android:clickable="true"
        android:focusable="true"
        android:paddingLeft="@dimen/standard_padding"
        android:paddingRight="@dimen/standard_padding">

        <ProgressBar
            android:id="@+id/train_refresh_pb"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/time_remaining_ll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/arrival_time_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arrival_time"
                android:textColor="@color/colourWhite"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minutes_abbreviated"
                android:textColor="@color/colourWhite"
                android:textStyle="bold" />

        </LinearLayout>

    </FrameLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/arrival_time_frame"
        android:layout_toRightOf="@+id/arrival_time_frame"
        android:orientation="vertical"
        android:paddingLeft="@dimen/standard_padding"
        android:paddingRight="@dimen/standard_padding">

        <TextView
            android:id="@+id/platform_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/platform" />

        <TextView
            android:id="@+id/numeric_arrival_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arrival_time_string"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/status_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status_string"
            android:textColor="@color/colourGreen"
            android:textSize="22sp"

            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:orientation="vertical"
        android:paddingLeft="@dimen/standard_padding"
        android:paddingRight="@dimen/standard_padding">

        <TextView
            android:id="@+id/destination_time_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/destination_time_string"
            android:textColor="@color/colourBlue"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/destination_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/destination_string"
            android:textColor="@color/colourBlack"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>